# cg-project

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: glad.c
lib/glad/glad/: glad.h
src/: game.cpp  game.h  glad.c  input.cpp  input.h  main.cpp
src/game/: game.h
src/resource_manager/: resource_manager.cpp  resource_manager.h
src/shader/: shader.h
src/sprite_renderer/: sprite_renderer.cpp  sprite_renderer.h
src/texture/: texture.cpp  texture.h
